# gdp_predictor

./: README.md  pyproject.toml
api/: main.py  schema.py  tests.py
notebook/: gdp.ipynb
notebook/datasets/: WEOOct2020all.xlsx
notebook/models/: required_columns.pkl
