[tool.poetry]
name = "gdp-predictor"
version = "0.1.0"
description = ""
authors = ["jimmykamau <jimmykambiz@gmail.com>"]
readme = "README.md"
packages = [{include = "gdp_predictor"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipython = "^8.14.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
matplotlib = "^3.7.2"
lazypredict = "^0.2.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
